CSE 310 Assignment 3/DemoCodes/conflict/y.output
Rules useless in parser due to conflicts

    4 c: 'x'


State 1 conflicts: 1 reduce/reduce


Grammar

    0 $accept: a $end

    1 a: b
    2  | c

    3 b: 'x'

    4 c: 'x'


Terminals, with rules where they appear

$end (0) 0
'x' (120) 3 4
error (256)


Nonterminals, with rules where they appear

$accept (4)
    on left: 0
a (5)
    on left: 1 2, on right: 0
b (6)
    on left: 3, on right: 1
c (7)
    on left: 4, on right: 2


State 0

    0 $accept: . a $end

    'x'  shift, and go to state 1

    a  go to state 2
    b  go to state 3
    c  go to state 4


State 1

    3 b: 'x' .
    4 c: 'x' .

    $end      reduce using rule 3 (b)
    $end      [reduce using rule 4 (c)]
    $default  reduce using rule 3 (b)


State 2

    0 $accept: a . $end

    $end  shift, and go to state 5


State 3

    1 a: b .

    $default  reduce using rule 1 (a)


State 4

    2 a: c .

    $default  reduce using rule 2 (a)


State 5

    0 $accept: a $end .

    $default  accept
